crates/reinhardt-pages/tests/ui/server_fnset/fail/action_missing_detail.stderr
error: custom actions require an explicit `detail = true` or `detail = false`
  --> tests/ui/server_fnset/fail/action_missing_detail.rs:10:11
   |
10 |     async fn publish(lookup: i64, #[inject] context: DetailActionContext<ArticleResource>) -> Result<ArticleDto, ServerFnSetError> {
   |              ^^^^^^^

error[E0277]: the trait bound `Actions: ServerFnSetActions<ArticleResource>` is not satisfied
 --> tests/ui/server_fnset/fail/action_missing_detail.rs:4:44
  |
4 | #[server_fnset(name = "article", actions = Actions)]
  |                                            ^^^^^^^ unsatisfied trait bound
  |
help: the trait `ServerFnSetActions<ArticleResource>` is not implemented for `Actions`
 --> tests/ui/server_fnset/fail/action_missing_detail.rs:3:1
  |
3 | struct Actions;
  | ^^^^^^^^^^^^^^

error[E0277]: the trait bound `Actions: ServerFnSetActions<ArticleResource>` is not satisfied
 --> tests/ui/server_fnset/fail/action_missing_detail.rs:4:1
  |
4 | #[server_fnset(name = "article", actions = Actions)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `ServerFnSetActions<ArticleResource>` is not implemented for `Actions`
 --> tests/ui/server_fnset/fail/action_missing_detail.rs:3:1
  |
3 | struct Actions;
  | ^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `server_fnset` (in Nightly builds, run with -Z macro-backtrace for more info)
